Applications/PiHole/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: pihole-svc
      port:
        number: 80
  rules:
  - host: dns.admin.theforlin.com 
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: pihole-svc
              port:
                number: 80
